# copicu

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  index.html  mise.toml  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: pull_request_template.md
docs/: ASSISTANT_RULES.md  DECISIONS.md  DEVELOPMENT.md  GLOSSARY.md  OPEN_QUESTIONS.md  OS_PLAYBOOK.md  PROJECT.md  README.md  TOPICS.md  USER_GUIDE.md  WORKING_MEMORY.md  github-growth-setup.md  launch-drafts.md
scripts/: agent-context-audit.ts  ai-markdown-summary.mjs  ai-query-planner.mjs  ai-script-planner.mjs  context-index.ts  copicu-script-runner.mjs  ensure-skills-link.ps1  import_copyq.py  run-example-action.mjs
specs/: README.md
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.built-dev.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  surface-ai-output.json  surface-main.json  surface-metadata.json  surface-notifications.json  surface-settings.json  surface-ui-host.json  surface-whichkey.json
src-tauri/examples/: bench_history_search.rs
src-tauri/src/: actions.rs  ai_planner.rs  clipboard.rs  clipboard_probe.rs  diagnostics.rs  enrichment.rs  host.rs  hotkeys.rs  image_capture.rs  lib.rs  main.rs  markdown_output.rs  script_editor.rs  storage.rs  surface_registry.rs  ui_host.rs  window_focus.rs  window_state.rs
src-tauri/src/actions/: builtin.rs  capabilities.rs  discovery.rs  host_api.rs  input.rs  logging.rs  model.rs  shortcuts.rs  url.rs
src-tauri/src/storage/: blobs.rs  schema.rs  search.rs
(+228 files in other folders)
