[package]
name = "copicu"
version = "0.2.0"
description = "A local keyboard-first clipboard manager inspired by CopyQ."
authors = ["JP"]
edition = "2021"
default-run = "copicu"
autobins = false

[lib]
name = "copicu_lib"
crate-type = ["rlib"]

[[bin]]
name = "copicu"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.2"
base64 = "0.22"
clipboard-rs = "0.3.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "=2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
